--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,9 +1,9 @@
 [xin_-1]
-file=/home/tim/Изображения/wallpapers/1.jpg
+file=/home/tim/wallpapers/1.jpg
 mode=4
 bgcolor=#000000
 
 [:0.0]
-file=/home/tim/Изображения/wallpapers/1.jpg
+file=/home/tim/wallpapers/1.jpg
 mode=4
 bgcolor=#000000
